spade-tests/src/snapshots/spade_tests__linear_check__array_indexing_does_not_use_whole_array.snap
---
source: spade-tests/src/linear_check.rs
---
use std::ports::new_mut_wire;
entity test() {
    let a = [inst new_mut_wire(), inst new_mut_wire()];
    set a[0] = 0u8;
}


error: a[1] is unused
  ┌─ testinput:3:9
  │
3 │     let a = [inst new_mut_wire(), inst new_mut_wire()];
  │         ^ a[1] is unused
  │
  = note: a[1] is a &mut value which must be set
